# penguins

./: pyproject.toml
models/: dt.pck  knn.pck  lr.pck  svm.pck
notebooks/: classification.ipynb  queries.ipynb
penguins/: app.py  index.html
