[tool.poetry]
name = "penguins"
version = "0.1.0"
description = ""
authors = ["Ruben Cid <rubencidlara@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.5.2"
seaborn = "^0.13.2"
flask = "^3.1.0"
pandas = "^2.2.3"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
